--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.add-button {
+  background: transparent;
+  border: none;
+  border-radius: 50%;
+  position: fixed;
+  right: 5%;
+  bottom: 5%;
+}
+
+.add-button-icon {
+  transform: scale(4);
+  color: skyblue;
+
+}
