css improvements color scheme added

--- a/src/Components/popupForm/PopupForm.css
+++ b/src/Components/popupForm/PopupForm.css
@@ -16,6 +16,13 @@
 }
 
 
+.btn{
+    font-weight: bold;
+    color: #3e2723;
+    background-color: #ffebee;
+
+}
+
 
 .popup-invisible {
     display: none;
